--- a/css/config/colors.scss
+++ b/css/config/colors.scss
@@ -2,6 +2,7 @@ $colors: (
     'text-primary': #000,
     'text-secondary': #a3a3a3,
     'text-thirdy': #fff,
+    'text-fourty': #6d6e73,
     'bg-primary': #fff,
     'bg-secondary': #000,
     'element-primary': #ffebb9,
