--- a/css/style.scss
+++ b/css/style.scss
@@ -93,6 +93,130 @@ textarea {
     margin-top: px-to-rem(50);
 }
 
+.first-section {
+    @include viewport-tablet-min{
+        margin-top: px-to-rem(60);
+    }
+    @include viewport-phone{
+        margin-top: px-to-rem(70);
+    }
+}
+
+//popup-----------------------------------------------------------------------
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.15s ease, visibility 0.15s ease;
+
+    &._open {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+
+        opacity: 0.4;
+        background-color: rgba(var(--color-text-secondary--rgb), 0.9);
+    }
+
+    &.popup-search {
+    }
+    
+    //.popup__container 
+    &__container {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 100%;
+        //height: px-to-rem(120);
+        transform: translate(-50%, -50%);
+        background-color: var(--color-bg-primary);
+
+        @include viewport-desktop {
+            max-width: 50%;
+        }
+        @include viewport-tablet {
+            max-width: 70%;
+        }
+        @include viewport-phone {
+            max-width: 80%;
+
+            @media (max-width: 768px) {
+                max-width: 90%;
+            }
+        }
+    }
+    
+    //.popup__wrapper 
+    &__wrapper {
+        display: flex;
+        width: 100%;
+        //height: 100%;
+        align-items: center;
+        justify-content: space-between;
+        column-gap: px-to-rem(12);
+        padding: px-to-rem(15) px-to-rem(27);
+    }
+    
+    //.popup__label 
+    &__label {
+        flex: 0 0 px-to-rem(20);
+        width: 100%;
+
+        img {
+            width: 100%;
+            height: auto;
+        }
+    }
+    
+    //.popup__form 
+    &__form {
+        width: 100%;
+
+        input {
+            @include form-input;
+            width: 100%;
+            border: unset;
+            font-size: px-to-rem(22);
+            color: var(--color-text-primary);
+            font-weight: 100;
+            outline: unset;
+            padding: px-to-rem(30) 0;
+
+            &::placeholder {
+                text-align: center;
+                font-size: px-to-rem(22);
+                color: var(--color-text-primary);
+                font-weight: 700;
+            }
+        }
+    }
+    
+    //.popup__close 
+    &__close {
+        flex: 0 0 px-to-rem(20);
+        width: 100%;
+
+        img {
+            width: 100%;
+            height: auto;
+        }
+    }
+}
+
+
 // section {
 
 //     @include viewport-desktop {
@@ -109,7 +233,7 @@ textarea {
 
 //HEADER
 .header {
-    position: sticky;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 10;
@@ -327,13 +451,15 @@ textarea {
         //.menu-list__item 
         &__item {
             display: block;
+            transition: color 0.3s ease;
             font-family: $font-family-title;
             font-weight: 700;
             font-size: px-to-rem(16);
             color: inherit;
 
             @include viewport-tablet-min {
-                &:not(._green, ._white):hover {
+                &:not(._green, ._white):hover,
+                &:not(._green, ._white):focus-visible {
                     color: var(--color-text-hover);
                 }
             }
@@ -341,7 +467,8 @@ textarea {
             @include viewport-phone {
                 text-align: center;
 
-                &:not(._green, ._white):hover {
+                &:not(._green, ._white):hover,
+                &:not(._green, ._white):focus-visible {
                     color: var(--color-text-primary);
                 }
 
@@ -424,6 +551,10 @@ textarea {
             @at-root .search-open:hover path {
                 fill: var(--color-text-hover);
             }
+
+            @at-root .search-open:focus-visible path {
+                fill: var(--color-text-hover);
+            }
         }
     }
 }
@@ -460,6 +591,9 @@ textarea {
                 transition: fill 0.2s ease;
     
                 @at-root .socials__item:hover path {
+                    fill: var(--color-text-hover);
+                }
+                @at-root .socials__item:focus-visible path {
                     fill: var(--color-text-hover);
                 }
             }
@@ -539,6 +673,249 @@ textarea {
     }
 }
 
+//MAIN SWIPER----------------------------------------------------------
+.mob-slider {
+    @include viewport-tablet-min {
+        display: none;
+    }
+    @include viewport-phone {
+        margin-top: px-to-rem(100);
+    }
+    
+    //.mob-slider__container 
+    &__container {
+        @include viewport-phone {
+            @media (max-width: 768px) {
+                max-width: unset;
+            }
+        }
+    }
+    
+    //.mob-slider__wrapper 
+    &__wrapper {
+    }
+}
+
+
+.main-swiper {
+    &.swiper {
+    }
+    .swiper-wrapper {
+    }
+    .swiper-slide {
+    }
+
+    //.swiper-main__btns__container 
+    &__btns__container {
+        .swiper-button-next,
+        .swiper-button-prev {
+            left: unset;
+            right: unset;
+            z-index: 2;
+            display: flex;
+            width: 100%;
+            height: unset;
+            justify-content: center;
+            align-items: center;
+            margin: unset;
+            padding: unset;
+            border: unset;
+            color: inherit;
+            background-color: unset;
+
+            &::after {
+                display: none;
+            }
+
+            &.swiper-button-disabled {
+                opacity: unset;
+                pointer-events: all;
+            }
+
+            svg {
+                width: 100%;
+                height: auto;
+            }
+
+            @include viewport-phone {
+                max-width: px-to-rem(50);
+                width: 100%;
+
+                @media (max-width: 768px) {
+                    max-width: px-to-rem(30);
+                }
+                @media (max-width: 520px) {
+                    max-width: px-to-rem(15);
+                }
+            }
+        }
+        .swiper-button-next {
+            right: 0;
+            transform: translate(-10%, -50%);
+
+            @media (max-width: 520px) {
+                transform: translate(-30%, 400%);
+            }
+        }
+        .swiper-button-prev {
+            left: 0;
+            transform: translate(10%, -50%);
+
+            @media (max-width: 520px) {
+                transform: translate(30%, 400%);
+            }
+        }
+    }    
+    
+    //.main-swiper__content 
+    &__content {
+        position: relative;
+        z-index: 0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        color: var(--color-text-thirdy);
+    }
+    
+    //.main-swiper__img 
+    &__img {
+        position: relative;
+        z-index: 0;
+
+        @include viewport-phone {
+            padding-top: 87.333%;
+
+            @media (max-width: 768px) {
+                padding-top: 58.267%;
+            }
+            @media (max-width: 550px) {
+                padding-top: px-to-rem(350);
+            }
+        }
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 1;
+            width: 100%;
+            height: 100%;
+            opacity: 0.3;
+            background-color: var(--color-bg-secondary);
+        }
+
+        img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+    
+    //.main-swiper__text 
+    &__text {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 2;
+        display: flex;
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    //.main-swiper__title 
+    &__title {
+        @include viewport-phone {
+            max-width: 70%;
+            width: 100%;
+            font-size: px-to-rem(32);
+            font-weight: 300;
+            font-family: $font-family-title;
+            line-height: 110%;
+            text-align: center;
+            margin: 0 auto;
+            margin-bottom: px-to-rem(35);
+
+            @media (max-width: 768px) {
+                font-size: px-to-rem(28);
+            }
+            @media (max-width: 550px) {
+                font-size: px-to-rem(22);
+                max-width: 85%;
+            }
+            @media (max-width: 414px) {
+                font-weight: 800;
+            }
+        }
+        .emoji {
+            @include emoji;
+            @include viewport-phone {
+                width: px-to-rem(32);
+                height: px-to-rem(32);
+                margin-right: px-to-rem(2);
+
+                @media (max-width: 768px) {
+                    width: px-to-rem(28);
+                    height: px-to-rem(28);
+                }
+                @media (max-width: 550px) {
+                    width: px-to-rem(22);
+                    height: px-to-rem(22);
+                }
+            }
+        }
+    }
+    
+    //.main-swiper__subtitle 
+    &__subtitle {
+        @include viewport-phone {
+            @include text-body-2;
+            max-width: 70%;
+            text-align: center;
+            margin-bottom: px-to-rem(15);
+
+            @media (max-width: 550px) {
+                max-width: 85%;
+            }
+        }
+    }
+    
+    //.main-swiper__tag 
+    &__tag {
+        &._white {
+            @include viewport-phone {
+                font-size: px-to-rem(12);
+                padding: px-to-rem(2) px-to-rem(20) px-to-rem(5);
+                color: var(--color-text-primary);
+                background-color: var(--color-bg-primary);
+            }
+        }
+        &._black {
+            @include viewport-phone {
+                @include text-body-2;
+                padding: px-to-rem(2) px-to-rem(5) px-to-rem(2) px-to-rem(2);
+                color: var(--color-text-thirdy);
+                background-color: var(--color-bg-secondary);
+
+                &::before {
+                    content: '#';
+                    display: inline-block;
+                    transform: translateX(px-to-rem(3));
+                }
+            }
+        }
+    }
+}
+
+
 //SEPARATE-SECTION-----------------------------------------------------
 .separate-section {
     padding: px-to-rem(30) 0;
@@ -613,7 +990,13 @@ textarea {
         background-color: var(--color-bg-primary);
 
         a {
+            transition: color 0.3s ease;
             color: inherit;
+
+            &:hover,
+            &:focus-visible {
+                color: var(--color-text-hover);
+            }
         }
     }
     
@@ -655,7 +1038,10 @@ textarea {
                 display: inline-block;
                 transition: color 0.3s ease;
 
-                @at-root .sidebar-list__title:hover a {
+                &:hover {
+                    color: var(--color-text-hover);
+                }
+                &:focus-visible {
                     color: var(--color-text-hover);
                 }
             }
@@ -688,6 +1074,18 @@ textarea {
     &.articles__thematic {
         @include viewport-phone {
             display: none;
+        }
+    }
+
+    &._desk {
+        @include viewport-phone {
+            display: none;
+        }
+    }
+
+    &._no-border {
+        @include viewport-tablet-min {
+            border-bottom: unset;
         }
     }
 
@@ -766,6 +1164,12 @@ textarea {
         &.two-columns {
             @include viewport-tablet-min {
                 grid-template-columns: repeat(2, 1fr);
+            }
+
+            @at-root .separate-section__right .articles__btn__container {
+                @include viewport-tablet-min {
+                    display: none;
+                }
             }
         }
 
@@ -846,6 +1250,9 @@ textarea {
                 @at-root .articles-list__item:hover .articles-list__img::before {
                     opacity: 0.2;
                 }
+                @at-root .articles-list__img:focus-visible::before {
+                    opacity: 0.2;
+                }
             }
 
             //.articles-list__img__container 
@@ -878,6 +1285,9 @@ textarea {
             color: var(--color-text-thirdy);
 
             @at-root .articles-list__item:hover & {
+                transform: translate(px-to-rem(-10), px-to-rem(-10));
+            }
+            @at-root .articles-list__img:focus-visible & {
                 transform: translate(px-to-rem(-10), px-to-rem(-10));
             }
 
@@ -916,7 +1326,7 @@ textarea {
         &__text__content {
             @include viewport-phone {
                 @media (max-width: 768px) {
-                    max-width: 98.684%;
+                    max-width: 92%;
                     margin: 0 auto;
                 }
             }
@@ -941,6 +1351,127 @@ textarea {
             @include text-body-2;
             color: var(--color-text-secondary);
         }
+    }
+}
+
+//SPONSORS----------------------------------------------
+.sponsors {
+    margin-bottom: px-to-rem(20);
+
+    //.sponsors__wrapper 
+    &__wrapper {
+        max-width: px-to-rem(707);
+        width: 100%;
+        margin: 0 auto;
+
+        @include viewport-phone {
+            @media (max-width: 768px) {
+                max-width: unset;
+            }
+        }
+    }
+    
+    //.sponsors__text 
+    &__text {
+        text-align: center;
+        margin-bottom: px-to-rem(14);
+        color: var(--color-text-fourty);
+
+        @include viewport-phone {
+            font-size: px-to-rem(16);
+        }
+
+        a {
+            transition: color 0.3s ease;
+            color: inherit;
+
+            &:hover,
+            &:focus-visible {
+                color: var(--color-text-hover);
+            }
+        }
+    }
+    
+    //.sponsors-list 
+    &-list {
+        display: flex;
+        justify-content: center;
+
+        @include viewport-phone {
+            @media (max-width: 768px) {
+                max-width: px-to-rem(310);
+                width: 100%;
+                flex-wrap: wrap;
+                margin: 0 auto;
+            }
+        }
+        
+        //.sponsors-list__item 
+        &__item {
+            border-top: 1px solid rgba(var(--color-text-secondary--rgb), 0.4);
+            padding: px-to-rem(8);
+
+            &:nth-child(4) {
+                img {
+                    @include viewport-phone {
+                        max-width: px-to-rem(81);
+                        height: auto;
+                    }
+                }
+            }
+
+            img {
+                @include viewport-tablet-min {
+                    height: 100%;
+                    width: auto;
+                }
+                @include viewport-phone {
+                    max-width: px-to-rem(139);
+                    height: auto;
+                }
+            }
+        }
+    }
+}
+
+//marque------------------------------------------------
+.marquee {
+    overflow: hidden;
+
+    @include viewport-tablet-min {
+        display: none;
+    }
+
+    @include viewport-phone {
+        margin-top: px-to-rem(20);
+    }
+    
+    //.marquee__wrapper 
+    &__wrapper {
+    }
+    
+    //.marquee__title 
+    &__title {
+        display: inline-block;
+        font-weight: 600;
+        font-size: px-to-rem(27);
+
+        a {
+            color: inherit;
+            box-shadow: inset -3px -15px 0px -10px var(--color-element-primary);
+        }
+
+        img {
+            @include emoji;
+            width: px-to-rem(27);
+            height: px-to-rem(27);
+            margin-right: px-to-rem(2);
+        }
+    }
+
+    .empty {
+        display: inline-block;
+        margin-right: px-to-rem(30);
     }
 }
 
