--- a/css/style.css
+++ b/css/style.css
@@ -466,6 +466,25 @@ textarea:focus-visible {
   height: auto;
 }
 
+.progressbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  overflow: hidden;
+}
+.progressbar__inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0%;
+  -webkit-transition: width 0.2s linear;
+  transition: width 0.2s linear;
+  background-color: var(--color-element-primary);
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -726,7 +745,7 @@ textarea:focus-visible {
   color: inherit;
 }
 @media (min-width: 992px) {
-  .menu-list__item:not(._green, ._white):hover, .menu-list__item:not(._green, ._white):focus-visible {
+  .menu-list__item._active, .menu-list__item:not(._green, ._white):hover, .menu-list__item:not(._green, ._white):focus-visible {
     color: var(--color-text-hover);
   }
 }
@@ -1254,6 +1273,27 @@ textarea:focus-visible {
             justify-content: space-between;
   }
 }
+._reverse .separate-section__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+@media (min-width: 992px) {
+  ._reverse .separate-section__wrapper {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+@media (max-width: 991px) {
+  ._reverse .separate-section__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+}
+
 @media (min-width: 1200px) {
   .separate-section__left {
     -webkit-box-flex: 0;
@@ -1280,6 +1320,11 @@ textarea:focus-visible {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 59.793%;
             flex: 0 0 59.793%;
+  }
+}
+@media (max-width: 991px) {
+  ._reverse .separate-section__right {
+    margin-bottom: 3.125rem;
   }
 }
 
@@ -1511,6 +1556,21 @@ textarea:focus-visible {
   }
 }
 
+.articles-list.two-columns-mob {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1.875rem 1fr;
+  grid-template-columns: repeat(2, 1fr);
+  -webkit-column-gap: 1.875rem;
+     -moz-column-gap: 1.875rem;
+          column-gap: 1.875rem;
+  row-gap: 1.875rem;
+}
+@media (max-width: 991px) and (max-width: 768px) {
+  .articles-list.two-columns-mob {
+    display: block;
+  }
+}
 @media (min-width: 992px) {
   .articles-list {
     display: -ms-grid;
