--- a/css/style.scss
+++ b/css/style.scss
@@ -216,6 +216,27 @@ textarea {
     }
 }
 
+//progressbar----------------------------------------------------------------
+.progressbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    overflow: hidden;
+    
+    //.progressbar__inner 
+    &__inner {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 0%;
+        transition: width 0.2s linear;
+        background-color: var(--color-element-primary);
+    }
+}
+
 
 // section {
 
@@ -458,6 +479,7 @@ textarea {
             color: inherit;
 
             @include viewport-tablet-min {
+                &._active, 
                 &:not(._green, ._white):hover,
                 &:not(._green, ._white):focus-visible {
                     color: var(--color-text-hover);
@@ -935,6 +957,17 @@ textarea {
             display: flex;
             justify-content: space-between;    
         }
+
+        @at-root ._reverse & {
+            display: flex;
+
+            @include viewport-tablet-min{
+                justify-content: space-between;    
+            }
+            @include viewport-phone{
+                flex-direction: column-reverse;  
+            }
+        }
     }
     
     //.separate-section__left 
@@ -954,6 +987,12 @@ textarea {
         }
         @include viewport-tablet {
             flex: 0 0 59.793%;
+        }
+
+        @at-root ._reverse & {
+            @include viewport-phone {
+                margin-bottom: px-to-rem(50);
+            }
         }
     }
 }
@@ -1169,6 +1208,19 @@ textarea {
             @at-root .separate-section__right .articles__btn__container {
                 @include viewport-tablet-min {
                     display: none;
+                }
+            }
+
+            &-mob {
+                display: grid;
+                grid-template-columns: repeat(2, 1fr);
+                column-gap: px-to-rem(30);
+                row-gap: px-to-rem(30);
+
+                @include viewport-phone {
+                    @media (max-width: 768px) {
+                        display: block;
+                    }
                 }
             }
         }
