--- a/css/style.scss
+++ b/css/style.scss
@@ -942,6 +942,16 @@ textarea {
 .separate-section {
     padding: px-to-rem(30) 0;
 
+    &.separate-section__about {
+        .separate-section__left {
+            @include viewport-phone {
+                @media (max-width: 768px) {
+                    display: none;
+                }
+            }
+        }
+    }
+
     //.separate-section__container 
     &__container {
         @include viewport-phone {
@@ -962,6 +972,18 @@ textarea {
             display: flex;
 
             @include viewport-tablet-min{
+                justify-content: space-between;    
+            }
+            @include viewport-phone{
+                flex-direction: column-reverse;  
+            }
+        }
+
+        @at-root ._reverse-desk & {
+            display: flex;
+
+            @include viewport-tablet-min{
+                flex-direction: row-reverse;  
                 justify-content: space-between;    
             }
             @include viewport-phone{
@@ -1218,8 +1240,20 @@ textarea {
                 row-gap: px-to-rem(30);
 
                 @include viewport-phone {
+                    > * {
+                        + * {
+                            margin-top: px-to-rem(0);
+                        }
+                    }
+
                     @media (max-width: 768px) {
                         display: block;
+
+                        > * {
+                            + * {
+                                margin-top: px-to-rem(30);
+                            }
+                        }
                     }
                 }
             }
@@ -1524,6 +1558,200 @@ textarea {
     .empty {
         display: inline-block;
         margin-right: px-to-rem(30);
+    }
+}
+
+//about-------------------------------------------------
+.about {
+    @include viewport-phone {
+        margin-bottom: px-to-rem(30);
+    }
+
+    //.about__wrapper 
+    &__wrapper {
+        @include viewport-phone {
+            max-width: px-to-rem(680);
+            margin: 0 auto;
+
+            @media (max-width: 768px) {
+                max-width: 91.501%;
+            }
+        }
+    }
+
+    .about-donate {
+        @include viewport-tablet-min {
+            display: none;
+        }
+        
+        @include viewport-phone {
+            @media (max-width: 768px) {
+                position: relative;
+            }
+        }
+
+        &::before {
+            @include viewport-phone {
+                @media (max-width: 768px) {
+                    content: '';
+                    position: absolute;
+                    top: 0;
+                    left: 50%;
+                    height: 100%;
+                    width: 100vw;
+                    background-color: var(--color-element-primary);
+                    transform: translateX(-50%);
+                }
+            }
+        }
+
+        //.about-donate__wrapper 
+        &__wrapper {
+            
+            @include viewport-phone {
+                padding: px-to-rem(30);
+                background-color: var(--color-element-primary);
+
+                @media (max-width: 768px) {
+                    position: relative;
+                }
+            }
+
+            
+        }
+        
+        //.about-donate__title 
+        &__title {
+            @include text-heading-2;
+            padding-bottom: px-to-rem(15);
+
+            img {
+                @include emoji;
+                width: px-to-rem(26);
+                height: px-to-rem(26);
+                transform: translateY(-4px);
+            }
+        }
+        
+        //.about-donate__text 
+        &__text {
+            @include text-body-2;
+            margin-bottom: px-to-rem(15);
+        }
+        
+        //.about-donate__btns__container 
+        &__btns__container {
+            display: flex;
+            justify-content: space-between;
+
+            @include viewport-phone {
+                max-width: 84.21%;
+                margin: 0 auto;
+                margin-bottom: px-to-rem(15);
+
+                @media (max-width: 430px) {
+                    max-width: unset;
+                }
+                @media (max-width: 350px) {
+                    flex-direction: column;
+                    justify-content: unset;
+                    align-items: center;
+                    row-gap: px-to-rem(10);
+                }
+            }
+        }
+        
+        //.about-donate__btn 
+        &__btn {
+            @include button-black;
+            width: unset;
+            font-size: px-to-rem(26);
+            padding: px-to-rem(12) px-to-rem(18);
+
+            @media (max-width: 768px) {
+                font-size: px-to-rem(24);
+            }
+            
+            @media (max-width: 530px) {
+                font-size: px-to-rem(16);
+            }
+        }
+        
+        //.about-donate__more 
+        &__more {
+            display: flex;
+            justify-content: center;
+
+            //.about-donate__more__btn 
+            &__btn {
+                transition: color 0.3s ease;
+                font-size: px-to-rem(14);
+                font-style: italic;
+                text-decoration: underline;
+                color: inherit;
+
+                &:hover,
+                &:focus-visible {
+                    color: var(--color-text-hover);
+                }
+            }
+        }
+    }
+    
+    //.about__paragraph 
+    &__paragraph {
+        margin-bottom: px-to-rem(40);
+
+        &._first {
+            margin: px-to-rem(20) 0;
+        }
+
+        h2 {
+            @include text-heading-2;
+            margin-bottom: px-to-rem(20);
+            
+            @include viewport-desktop {
+                font-size: px-to-rem(32);
+            }
+        }
+
+        a {
+            color: inherit;
+            text-decoration: none;
+            transition: box-shadow 0.15s ease;
+            box-shadow: inset px-to-rem(-3) px-to-rem(-15) 0 px-to-rem(-10) var(--color-element-primary);
+
+            &:hover,
+            &:focus-visible {
+                box-shadow: inset px-to-rem(-4) px-to-rem(-20) 0 px-to-rem(-10) var(--color-element-primary);
+            }
+        }
+
+        p {
+           @include text-body-1;
+        }
+
+        strong {
+            font-weight: 700;
+        }
+    }
+    
+    //.about__img 
+    &__img {
+        max-width: px-to-rem(370);
+        width: 100%;
+        margin: 0 auto;
+
+        @include viewport-phone {
+            @media (max-width: 370px) {
+                max-width: unset;
+            }
+        }
+
+        img {
+            width: 100%;
+            height: auto;
+        }
     }
 }
 
